[package]
name = "taquinplus"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
attohttpc = "0.26.1"
bevy = { version = "0.12", features=["webp"] }
bevy-inspector-egui = "0.21.0"
bevy_mod_outline = "0.6.0"
bevy_mod_picking = "0.17.0"
bevy_tweening = "0.9.0"
grid = "0.13.0"
rand = "0.8.5"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
