[package]
name = "taquinplus"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", features=["webp"] }
bevy-inspector-egui = "0.25"
bevy_mod_outline = "0.8"
bevy_mod_picking = "0.20"
bevy_tweening = "0.11"
grid = "0.13"
rand = "0.8"
bevy_camera_blur = {git = "https://github.com/BorisBoutillier/bevy_camera_blur", features = ["bevy_tweening"]}

[target.'cfg(not(target_family="wasm"))'.dependencies]
attohttpc = "0.26"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
